--- a/views/dress.pug
+++ b/views/dress.pug
@@ -1,19 +1,19 @@
 extends layout
-
+ 
 block content
   h1= title
   -
     let items  = results
   div(class= "container-fluid")
-    div(class = "row")
+    div(class = "row m-1")
       each item,index in items
-        div(class= "col-sm-2", onclick=`buy(${index})`) Brand: #{item.dress_brand}
-        div(class= "col-sm-2", onclick=`buy(${index})`) Size: #{item.dress_size}
-        div(class= "col-sm-2", onclick=`buy(${index})`) Cost: #{item.dress_cost}
+        - let destination = `dispatch(\"/dress/update?id=${item._id}\")`
+        div(class="row-sm-2", class="m-1") Item #{item.dress_brand}(#{item.dress_size}) is #{item.dress_cost}
         br
         br
-        
+        button.btn( class="btn-primary ml-1", onclick= destination) Update
+       
   script.
-    function buy(itemNum){
-      alert(`You purchased item ${itemNum+1}`)
+    function dispatch(path){
+      window.location.href=path
     }
