--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Nothwest is a beautiful university
-  button(type="button", class="btn btn-secondary" onclick="goFaster()") Press me 
-
-  div(id="faster") <i>Incresase the speed.</i>
-  br
-  a(href="dress") Link to Dress
-  script.
-    let mph =20;
-    let change =1;
-    function goFaster(){
-      mph=change+mph;
-      change =  change+1;
-      let result = document.getElementById("faster");
-      result.innerHTML = `MPH ${mph} with change ${change}`
-    } 
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/earbuds") Take me to Dress
+    br
+    a(href="/logout") Logout
